--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
+    "@mui/x-tree-view": "^8.3.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.49.5",
     "@types/react-router-dom": "^5.3.3",
