--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/x-tree-view": "^8.3.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.49.5",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
